--- a/app/views/subdptos/_form.html.erb
+++ b/app/views/subdptos/_form.html.erb
@@ -16,6 +16,10 @@
       <%= f.label :name%><br>
       <%= f.text_field :name, :autofocus => true %>
     </div>
+    <div class="field">
+      <%= f.label :abbr%><br>
+      <%= f.text_field :abbr%>
+    </div>
     <div class="actions">
       <%= f.submit %>
     </div>
