--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,22 +7,77 @@ body {
 
 .computers_list {
   float: left;
-  width: 100%;
-  display: form;
-    display-float: left;
-    display-width: 100%; }
+  width: 100%; }
+  .computers_list thead {
+    width: 100%;
+    float: left; }
+    .computers_list thead th {
+      width: 160px;
+      text-align: center; }
+    .computers_list thead .ip {
+      width: 52px !important; }
   .computers_list .fields {
     float: left;
-    width: 100%; }
+    width: 100%;
+    cursor: pointer; }
     .computers_list .fields td {
       padding: 5px;
       width: 150px;
       float: left;
       background: #fff;
-      margin: 0 2px 0 0; }
-    .computers_list .fields .ip {
-      width: 40px;
+      margin: 0 2px 0 0;
+      border: 1px solid #fff;
       text-align: center; }
+    .computers_list .fields .ip {
+      width: 40px; }
+    .computers_list .fields .actions {
+      display: none;
+      background: #ccc; }
+  .computers_list .fields:hover .actions {
+    display: inline; }
+  .computers_list .fields:hover {
+    opacity: .6; }
+  .computers_list .fields:nth-child(2n+1) .actions {
+    background: #ccc; }
+  .computers_list .fields:nth-child(2n+1):hover {
+    opacity: .6; }
   .computers_list .fields:nth-child(2n+1) td {
+    padding: 5px;
+    width: 150px;
+    float: left;
     background: #e0f1ff;
     border: 1px solid #d8e7ed; }
+  .computers_list .fields:nth-child(2n+1) .ip {
+    width: 40px;
+    text-align: center; }
+
+.computers_list .edit_computer, #new_computer {
+  float: left;
+  width: 100%; }
+  .computers_list .edit_computer .fields, #new_computer .fields {
+    background: yellow; }
+  .computers_list .edit_computer thead, #new_computer thead {
+    width: 100%;
+    float: left; }
+    .computers_list .edit_computer thead th, #new_computer thead th {
+      float: left;
+      width: 160px;
+      text-align: center; }
+    .computers_list .edit_computer thead .ip, #new_computer thead .ip {
+      width: 52px !important; }
+  .computers_list .edit_computer .fields div, .computers_list .edit_computer .fields td, #new_computer .fields div, #new_computer .fields td {
+    float: left;
+    width: 150px;
+    padding: 5px;
+    margin-right: 4px; }
+    .computers_list .edit_computer .fields div input, .computers_list .edit_computer .fields div select, .computers_list .edit_computer .fields td input, .computers_list .edit_computer .fields td select, #new_computer .fields div input, #new_computer .fields div select, #new_computer .fields td input, #new_computer .fields td select {
+      width: 100%; }
+  .computers_list .edit_computer .fields .ip, #new_computer .fields .ip {
+    width: 40px; }
+    .computers_list .edit_computer .fields .ip input, #new_computer .fields .ip input {
+      width: 40px; }
+  .computers_list .edit_computer .fields .actions input, #new_computer .fields .actions input {
+    width: 100px; }
+
+#new_computer .fields {
+  background: none; }
