--- a/app/views/computers/_form.html.erb
+++ b/app/views/computers/_form.html.erb
@@ -12,31 +12,23 @@
   <% end %>
   <table>
     <thead>
-        <th>IP</th>
+        <th class="ip">IP</th>
         <th>Departamento</th>
         <th>Subdepartamento</th>
         <th>Tipo</th>
         <th>Usuário</th>
         <th></th>
     </thead>
-    <td>
-      <%= f.number_field :ip, :autofocus => true%>
-    </td>
-    <td>
-      <%= f.select :dpto_id, @dptos.to_a.collect {|d| [d.name, d.id] }, {include_blank: true}%>
-    </td>
-    <td>
-      <%= select_tag :subdpto_id, {}, :disabled => true, :id=>"computer_subdpto_id"%>
-    </td>
-    <td>
-      <%= f.text_field :sort %>
-    </td>
-    <td>
-      <%= f.text_field :name %>
-    </td>
-    <td class="actions">
-      <%= f.submit %>
-    </td>
+    <tbody>
+      <tr class="fields">
+        <td class="ip"><%= f.number_field :ip, :autofocus => true%></td>
+        <td class="dpto"><%= f.select :dpto_id, @dptos.to_a.collect {|d| [d.name, d.id] }, {include_blank: true}%></td>
+        <td class="subdpot"><%= select_tag :subdpto_id, {}, :disabled => true, :id=>"computer_subdpto_id"%></td>
+        <td class="sort"><%= f.text_field :sort %></td>
+        <td class="name"><%= f.text_field :name %></td>
+        <td class="actions"><%= f.submit %></td>
+      </tr>
+    </tbody>
   </table>
 <% end %>
 <script type="text/javascript">
