--- a/app/views/subdptos/_edit.html.erb
+++ b/app/views/subdptos/_edit.html.erb
@@ -1,10 +1,11 @@
 <%= form_for([@dpto, @subdpto], :remote => true, :class => "edit_form") do |f| %>
     <%= f.text_field :name, :autofocus => true %>
+    <%= f.text_field :abbr%>
     <%= f.submit 'Salvar', :class => 'submit_me' %>
 	<input type="button" class="cancel_btn" value="Cancelar"/>
 <% end %>
 <script>
 	$(".cancel_btn").click(function(){
-		$("#edit_subdpto_<%= @subdpto.id %>").replaceWith('<div class="subdpto_item_<%= @subdpto.id %>"><p><%=j @subdpto.name %></p><div class="actions"><%=j link_to "Editar", edit_dpto_subdpto_path(@dpto, @subdpto), :remote => true %><%=j link_to "Remover", dpto_subdpto_path(@dpto, @subdpto), method: :delete, data: { confirm: "Tem certeza?" }, :class => "remove_item", :remote => true %></div></div>'); 
+		$("#edit_subdpto_<%= @subdpto.id %>").replaceWith('<div class="subdpto_item_<%= @subdpto.id %>"><p><%=j @subdpto.abbr %> - <%=j @subdpto.name %></p><div class="actions"><%=j link_to "Editar", edit_dpto_subdpto_path(@dpto, @subdpto), :remote => true %><%=j link_to "Remover", dpto_subdpto_path(@dpto, @subdpto), method: :delete, data: { confirm: "Tem certeza?" }, :class => "remove_item", :remote => true %></div></div>'); 
 	});
 </script>
