--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <h1>SiP - ATS</h1>
 <ul>
 	<li><a href="/dptos">Departamentos</a></li>
-	<li><a href="/equipments">Impressoras</a></li>
+	<li><a href="/equipment">Impressoras</a></li>
 	<li><a href="/computers">Computadores</a></li>
 	<li><a href="/reports">Relatórios</a></li>
 </ul>
