--- a/app/views/equipment/edit.html.erb
+++ b/app/views/equipment/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing equipment</h1>
+<h1>Editing computer</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @equipment %> |
-<%= link_to 'Back', equipment_index_path %>
+<%= link_to 'Show', @computer %> |
+<%= link_to 'Back', computers_path %>
