--- a/app/views/equipment/new.html.erb
+++ b/app/views/equipment/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New equipment</h1>
+<h1>New computer</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', equipment_index_path %>
+<%= link_to 'Back', computers_path %>
