--- a/app/views/equipment/destroy.js.erb
+++ b/app/views/equipment/destroy.js.erb
@@ -1,3 +1,3 @@
-$("#equipment_item_<%=@computer.id %>").fadeOut(function(){
+$("#equipment_item_<%=@equipment.id %>").fadeOut(function(){
   $(this).remove();
 });
