Set up table functions correctly

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,63 @@
-body {
+body, html {
   margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
+  padding: 0; }
+
+body {
+  font-family: 'Open Sans', Arial, sans-serif;
   font-size: 14px;
-  color: 333; }
+  color: 333;
+  background: #f9f9f9; }
+
+.wrapper {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0; }
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+  padding-right: 20px; }
+
+header {
+  width: 100%;
+  height: 50px;
+  float: left;
+  background: #f1f1f1;
+  border-bottom: 1px solid #fff;
+  box-shadow: 0 1px 0px #cccccc;
+  margin: 0 0 10px 0; }
+  header .logo {
+    float: left;
+    margin: 0 10px 0 0; }
+    header .logo img {
+      float: left;
+      margin: 8px 5px 0 0; }
+    header .logo span {
+      font-size: 40px;
+      padding: 0;
+      line-height: 50px; }
+
+.main_content {
+  float: left;
+  width: 100%;
+  padding: 10px; }
+
+footer {
+  float: left;
+  width: 100%;
+  text-align: center;
+  margin: 60px 0 40px 0;
+  font-size: 12px; }
+  footer .container {
+    border-top: 1px solid #cccccc; }
+  footer p, footer a {
+    color: #a1a1a1; }
 
 .computers_list, .equipments_list {
   float: left;
-  width: 100%; }
+  width: 50%; }
   .computers_list thead, .equipments_list thead {
-    width: 100%;
+    width: 60%;
     float: left; }
     .computers_list thead th, .equipments_list thead th {
       width: 160px;
@@ -18,11 +66,11 @@ body {
       width: 52px !important; }
   .computers_list .fields, .equipments_list .fields {
     float: left;
-    width: 100%;
+    width: 90%;
     cursor: pointer; }
     .computers_list .fields td, .equipments_list .fields td {
       padding: 5px;
-      width: 150px;
+      width: 165px;
       float: left;
       background: #fff;
       margin: 0 2px 0 0;
@@ -33,18 +81,14 @@ body {
       width: 40px; }
     .computers_list .fields .actions, .equipments_list .fields .actions {
       display: none;
-      background: #ccc; }
+      background: #f1f1f1; }
   .computers_list .fields:hover .actions, .equipments_list .fields:hover .actions {
     display: inline; }
-  .computers_list .fields:hover, .equipments_list .fields:hover {
-    opacity: .6; }
   .computers_list .fields:nth-child(2n+1) .actions, .equipments_list .fields:nth-child(2n+1) .actions {
-    background: #ccc; }
-  .computers_list .fields:nth-child(2n+1):hover, .equipments_list .fields:nth-child(2n+1):hover {
-    opacity: .6; }
+    background: #f1f1f1; }
   .computers_list .fields:nth-child(2n+1) td, .equipments_list .fields:nth-child(2n+1) td {
     padding: 5px;
-    width: 150px;
+    width: 151px;
     float: left;
     background: #e0f1ff;
     border: 1px solid #d8e7ed; }
@@ -58,31 +102,82 @@ body {
     width: 40px;
     text-align: center; }
 
-.computers_list, .edit_computer, #new_computer, .equipments_list, .edit_equipment, #new_equipment {
-  float: left;
+.edit_computer, #new_computer, .edit_equipment, #new_equipment {
   width: 100%; }
+
+.computers_list, .equipments_list {
+  width: 80%; }
+
+.computers_list, .edit_computer, #new_computer, .equipments_list, .edit_equipment, #new_equipment {
+  float: left; }
   .computers_list thead, .edit_computer thead, #new_computer thead, .equipments_list thead, .edit_equipment thead, #new_equipment thead {
     width: 100%;
     float: left; }
     .computers_list thead th, .edit_computer thead th, #new_computer thead th, .equipments_list thead th, .edit_equipment thead th, #new_equipment thead th {
       float: left;
-      width: 160px;
+      width: 164px;
       text-align: center; }
     .computers_list thead .ip, .edit_computer thead .ip, #new_computer thead .ip, .equipments_list thead .ip, .edit_equipment thead .ip, #new_equipment thead .ip {
       width: 52px !important; }
   .computers_list .fields div, .computers_list .fields td, .edit_computer .fields div, .edit_computer .fields td, #new_computer .fields div, #new_computer .fields td, .equipments_list .fields div, .equipments_list .fields td, .edit_equipment .fields div, .edit_equipment .fields td, #new_equipment .fields div, #new_equipment .fields td {
     float: left;
-    width: 150px;
+    width: 151px;
     padding: 5px;
     margin-right: 4px; }
     .computers_list .fields div input, .computers_list .fields div select, .computers_list .fields td input, .computers_list .fields td select, .edit_computer .fields div input, .edit_computer .fields div select, .edit_computer .fields td input, .edit_computer .fields td select, #new_computer .fields div input, #new_computer .fields div select, #new_computer .fields td input, #new_computer .fields td select, .equipments_list .fields div input, .equipments_list .fields div select, .equipments_list .fields td input, .equipments_list .fields td select, .edit_equipment .fields div input, .edit_equipment .fields div select, .edit_equipment .fields td input, .edit_equipment .fields td select, #new_equipment .fields div input, #new_equipment .fields div select, #new_equipment .fields td input, #new_equipment .fields td select {
-      width: 100%; }
+      width: 100%;
+      text-align: center; }
   .computers_list .fields .ip, .edit_computer .fields .ip, #new_computer .fields .ip, .equipments_list .fields .ip, .edit_equipment .fields .ip, #new_equipment .fields .ip {
     width: 40px; }
     .computers_list .fields .ip input, .edit_computer .fields .ip input, #new_computer .fields .ip input, .equipments_list .fields .ip input, .edit_equipment .fields .ip input, #new_equipment .fields .ip input {
       width: 40px; }
   .computers_list .fields .actions input, .edit_computer .fields .actions input, #new_computer .fields .actions input, .equipments_list .fields .actions input, .edit_equipment .fields .actions input, #new_equipment .fields .actions input {
-    width: 100px; }
+    width: auto; }
 
 #new_computer .fields, #new_equipment .fields {
   background: none; }
+
+.home_logo {
+  text-align: center;
+  margin: 0 0 50px 0; }
+  .home_logo span {
+    font-size: 40px;
+    padding: 0;
+    margin-top: -10px; }
+
+.box {
+  float: left;
+  width: 100%;
+  margin: 150px 0 50px 0;
+  background: #fff;
+  border: 10px solid rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 30px 0; }
+
+.home_container {
+  width: 70%;
+  margin: 0 auto; }
+  .home_container .main_content {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center; }
+
+.home_links {
+  width: 100%;
+  margin: 0 0 0 20px;
+  text-align: center; }
+  .home_links li {
+    display: inline; }
+  .home_links a {
+    text-decoration: none;
+    color: #fff;
+    background: #3f92d2;
+    border-bottom: 4px solid #0b61a4;
+    width: 150px;
+    padding: 10px 15px;
+    float: left;
+    text-align: center;
+    margin: 0 10px 10px 0;
+    border-radius: 1px; }
+  .home_links a:hover {
+    background: #5aa1db; }
