--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,17 +1,94 @@
-body{
+//  Colors
+$p_blue: #0B61A4;
+$s_blue: #3F92D2;
+$s_blue2: #5AA1DB;
+$t_blue: #e0f1ff;
+$p_yellow: #FF9200;
+$s_yellow: #FFAD40;
+$t_yellow: #FFC373;
+$p_gray: #a1a1a1;
+$s_gray: #cccccc;
+$t_gray: #f1f1f1;
+
+
+// Main content
+
+body, html{
 	margin: 0;
 	padding: 0;
-	font-family: Arial, sans-serif;
-	font-size: 14px;
-	color: 333;
 }
 
-.computers_list, .equipments_list{
+body{
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-size: 14px;
+	color: 333;
+	background: #f9f9f9;
+}
+
+.wrapper{
+	width: 100%;
+	margin:  0 auto;
+	padding: 0;
+}
+.container{
+	width: 80%;
+	margin: 0 auto;
+	padding-right: 20px; // Align all the content
+}
+
+header{
+	width: 100%;
+	height: 50px;
+	float: left;
+	background: $t_gray;
+	border-bottom: 1px solid #fff;
+	box-shadow: 0 1px 0px $s_gray;
+	margin: 0 0 10px 0;
+
+	.logo{
+		float: left;
+		margin:0 10px 0 0;
+		
+		img{
+			float: left;
+			margin: 8px 5px 0 0;
+		}
+		span{
+			font-size: 40px;
+			padding: 0;
+			line-height: 50px;
+		}
+	}
+}
+
+.main_content{
 	float: left;
 	width: 100%;
+	padding: 10px;
+}
+
+footer{
+	float: left;
+	width: 100%;
+	text-align: center;
+	margin: 60px 0 40px 0;
+	font-size: 12px;
+	
+	.container{
+		border-top: 1px solid $s_gray;
+	}
+	p, a{
+		color: $p_gray;
+	}
+}
+
+//  Tables
+.computers_list, .equipments_list{
+	float: left;
+	width: 50%;
 
 	thead{
-		width: 100%;
+		width: 60%;
 		float: left;
 
 		th{
@@ -25,12 +102,12 @@ body{
 
 	.fields{
 		float: left;
-		width: 100%;
+		width: 90%;
 		cursor: pointer;
 
 		td{
 			padding: 5px;
-			width: 150px;
+			width: 165px;
 			float: left;
 			background: #fff;
 			margin: 0 2px 0 0;
@@ -45,7 +122,7 @@ body{
 
 		.actions{
 			display: none;
-			background: #ccc;
+			background: $t_gray;
 		}
 
 	}
@@ -54,23 +131,15 @@ body{
 		display: inline;
 	}
 
-	.fields:hover{
-		opacity: .6;
-	}
-
 	.fields:nth-child(2n+1) .actions{
-		background: #ccc;
-	}
-
-	.fields:nth-child(2n+1):hover{
-		opacity: .6;
+		background: $t_gray;
 	}
 
 	.fields:nth-child(2n+1) td{
 		padding: 5px;
-		width: 150px;
+		width: 151px;
 		float: left;
-		background: #e0f1ff;
+		background: $t_blue;
 		border: 1px solid #d8e7ed;
 	}
 	.fields:nth-child(2n+1) td:first-child{
@@ -90,9 +159,16 @@ body{
 	}
 }
 
+.edit_computer, #new_computer, .edit_equipment, #new_equipment{
+	width: 100%;
+}
+
+.computers_list, .equipments_list{
+	width: 80%;
+}
+
 .computers_list, .edit_computer, #new_computer, .equipments_list, .edit_equipment, #new_equipment{
 	float: left;
-	width: 100%;
 
 	thead{
 		width: 100%;
@@ -100,7 +176,7 @@ body{
 
 		th{
 			float: left;
-			width: 160px;
+			width: 164px;
 			text-align: center;
 		}
 		.ip{
@@ -110,12 +186,13 @@ body{
 
 	.fields div, .fields td{
 		float: left;
-		width: 150px;
+		width: 151px;
 		padding: 5px;
 		margin-right: 4px;
 
 		input, select{
 			width: 100%;
+			text-align: center;
 		}
 	}
 	.fields .ip{
@@ -126,7 +203,7 @@ body{
 	}
 	.fields .actions{
 		input{
-			width: 100px;
+			width: auto;
 		}
 	}
 }
@@ -135,4 +212,63 @@ body{
 	.fields{
 		background: none;
 	}
+}
+
+// Home page
+.home_logo{
+	text-align: center;
+	margin: 0 0 50px 0;
+
+	span{
+		font-size: 40px;
+		padding: 0;
+		margin-top: -10px;
+	}
+}
+
+.box{
+	float: left;
+	width: 100%;
+	margin: 150px 0 50px 0; 
+	background: #fff;
+	border:  10px solid hsla(0, 0, 0, .1);
+	border-radius: 5px;
+	padding: 30px 0;
+}
+
+
+.home_container{
+	width: 70%;
+	margin: 0 auto;
+
+	.main_content{
+		width: 100%;
+		margin: 0 auto;
+		text-align: center;
+	}
+}
+
+.home_links{
+	width: 100%;
+	margin: 0 0 0 20px;
+	text-align: center;
+	li{
+		display: inline;
+	}
+	a{
+		text-decoration: none;
+		color: #fff;
+		background: $s_blue;
+		border-bottom: 4px solid $p_blue;
+		width: 150px;
+		padding: 10px 15px;
+		float: left;
+		text-align: center;
+		margin: 0 10px 10px 0;
+		border-radius: 1px;
+	}
+	a:hover{
+		background: $s_blue2;
+	}
+
 }
