--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -11,16 +11,14 @@
 
 <div class="wrapper">
 
-	<header>
-		<div class="container">
-			<div class="logo"><%= link_to image_tag('logo.png'), '/' %> <span>/SiP</span></div>
-		</div>
-	</header>
 
-	<div class="container">
-		<div class="main_content">
-			<%= yield %>
-		</div>
+	<div class="home_container">
+	<div class="box">
+		<div class="home_logo"><%= link_to image_tag('logo.png'), '/' %> <span>/SiP<span></div>
+			<div class="main_content">
+				<%= yield %>
+			</div>
+	</div>
 	</div>
 
 	<footer>
